--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </span>
         <div class="info">
           <div class="price-wrapper">
-            <img src="/images/icon-music.svg" alt="Music Icon">
+            <img src="./images/icon-music.svg" alt="Music Icon">
             <div class="price">
               <strong>Annual Plan</strong>
               <span>$59.99/year</span>
